@@ -1,4 +1,6 @@
 master
+- Mayhem
+  Update archive redirection for many boards.
 
 2.39.3
 - Mayhem
